--- a/templates/dellos6_ntp.j2
+++ b/templates/dellos6_ntp.j2
@@ -11,7 +11,7 @@ dellos_ntp:
 
 #####################################}
 {% if dellos_ntp is defined and dellos_ntp %}
-  {% for key,value in dellos_ntp.iteritems() %}
+  {% for key,value in dellos_ntp.items() %}
     {% if key == "server" and value %}
       {% for item in value %}
         {% if item.ip is defined and item.ip %}
